--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     
     {% if page.title == "404: Page not found" %}
       <!-- TODO IMPORTANT: Change this base link for the 404 page any time the site URL is changed, otherwise resources won't load -->
-      <base href="https://digitalcredentials.github.io/dcc-website-jekyll-test/" target="_blank">
+      <base href="https://fields37.github.io/dcc-website-jekyll-test/" target="_blank">
     {% endif %}
   </head>
   <body>
