--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,28 +1,27 @@
-<nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-light d-print-inline">
-    <div class="container-fluid">
-        <a id="navbar-logo" class="navbar-brand logo-image" href="{{ site.baseurl }}"><img src="images/DCC_navbar-logo.png" alt="Digital Credentials Consortium"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+<!-- Navigation -->
+<nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-light">
+    <div class="container">
+        <a id="navbar-logo" class="navbar-brand logo-image" href="/"><img src="images/DCC_navbar-logo.png" alt="Digital Credentials Consortium"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-
+    
         <div class="collapse navbar-collapse" id="navbarToggler">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="{{ site.baseurl }}/our-work" data-target="#navbarToggler">Our Work</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="{{ site.baseurl }}/who-we-are" data-bs-toggle="dropdown">Who We Are</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="{{ site.baseurl }}/resources" data-target="#navbarToggler">Resources</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link  dropdown-toggle" href="{{ site.baseurl }}/get-involved" data-bs-toggle="dropdown">Get Involved</a>
-                 <ul class="dropdown-menu">
-                 <li><a class="dropdown-item" href="{{ site.baseurl }}/membership">Membership</a></li>
-                 </ul>
-              </li>
-          </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="/who-we-are" data-target="#navbarToggler">Who We Are</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="/technology" data-target="#navbarToggler">Technology</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="/projects" data-target="#navbarToggler">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="/publications" data-target="#navbarToggler">Publications</a>
+            </li>
+        </ul>
         </div>
     </div>
     </nav>
+<!-- end of navigation -->
